examples/test/testpolicy14825.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14825
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key10: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value14
          key26: value13
          key28: value3
      podSelector:
        matchLabels:
          key9: value10
